@@ -8,6 +8,9 @@
     <artifactId>automation_school</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <name>automation_school</name>
+    <url>https://maven.apache.org/</url>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>17</jdk.version>
@@ -22,8 +25,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
